moved testimonials below pricing

--- a/website/index.html
+++ b/website/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Backfeed.ai</title>
-
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="stylesheet" href="./src/main.css">
     <link rel="preconnect" href="https://fonts.bunny.net">
     <link href="https://fonts.bunny.net/css?family=poppins:100,400,700,900" rel="stylesheet" />
@@ -20,7 +20,7 @@
     </div>
     <nav class="w-full h-24 bg-[#18122B] text-gray-100 flex items-center fixed top-0 left-0 z-20">
         <div class="container mx-auto flex items-center justify-between">
-            <a href="/" class="font-bold inline-flex items-center justify-center gap-3 text-xl"><img class="rounded h-20 w-auto" src="/Backfeed Main Logo 2000x1500.jpg" /> Backfeed.ai</a>
+            <a href="/" class="font-bold inline-flex items-center justify-center gap-3 text-xl"><img class="rounded w-64" src="/Backfeed White logo 2000x1500.png" /></a>
             <div class="flex gap-8 items-center">
                 <a href="#home" class="hover:text-gray-300 transition-colors">Home</a>
                 <a href="#about" class="hover:text-gray-300 transition-colors">About</a>
@@ -67,39 +67,6 @@
                     <div class="rounded shadow bg-[#393053] p-10 text-gray-100">
                         <h3 class="font-bold">Candidate Feedback Analysis</h3>
                         <p>Backfeed.ai seamlessly scales with your needs, integrating candidate feedback data with analytics to continuously improve hiring practices.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section class="bg-gradient-to-r from-gray-100 to-gray-300 text-gray-800 py-10 lg:py-32">
-            <div class="container mx-auto flex flex-col gap-6">
-                <h1 class="text-3xl">Testimonials</h1>
-                <div class="flex items-center justify-between">
-                    <div class="rounded-xl bg-white shadow p-8 flex flex-col items-center justify-center max-w-[300px] w-full text-center gap-8">
-                        <img src="https://source.unsplash.com/random/250x250" alt="HR Manager" class="w-32 h-32 rounded-full">
-                        <p>We've transformed our recruitment process with Backfeed.ai. It's efficient, and the candidate experience is unmatched.</p>
-                        <p class="text-gray-500 text-sm">HR Manager, Tech Company</p>
-                    </div>
-                    <div class="rounded-xl bg-white shadow p-8 flex flex-col items-center justify-center max-w-[300px] w-full text-center gap-8">
-                        <img src="https://source.unsplash.com/random/250x250" alt="HR Manager" class="w-32 h-32 rounded-full">
-                        <p>We've transformed our recruitment process with Backfeed.ai. It's efficient, and the candidate experience is unmatched.</p>
-                        <p class="text-gray-500 text-sm">HR Manager, Tech Company</p>
-                    </div>
-                    <div class="rounded-xl bg-white shadow p-8 flex flex-col items-center justify-center max-w-[300px] w-full text-center gap-8">
-                        <img src="https://source.unsplash.com/random/250x250" alt="HR Manager" class="w-32 h-32 rounded-full">
-                        <p>We've transformed our recruitment process with Backfeed.ai. It's efficient, and the candidate experience is unmatched.</p>
-                        <p class="text-gray-500 text-sm">HR Manager, Tech Company</p>
-                    </div>
-                    <div>
-                        <div class="rounded-full p-2 pr-3 w-full shadow bg-white flex items-center justify-between mx-auto">
-                            <div class="w-24 h-24 rounded-full bg-white p-1 overflow-hidden"><img class="rounded-full object-fit w-full h-full" src="https://source.unsplash.com/random/252x252" alt=""></div>
-                            <div class="w-24 h-24 rounded-full -ml-16 bg-white p-1 overflow-hidden"><img class="rounded-full object-fit w-full h-full" src="https://source.unsplash.com/random/252x252" alt=""></div>
-                            <div class="w-24 h-24 rounded-full -ml-16 bg-white p-1 overflow-hidden"><img class="rounded-full object-fit w-full h-full" src="https://source.unsplash.com/random/252x252" alt=""></div>
-                            <div class="w-24 h-24 rounded-full -ml-16 bg-white p-1 overflow-hidden"><img class="rounded-full object-fit w-full h-full" src="https://source.unsplash.com/random/252x252" alt=""></div>
-                            <div class="w-24 h-24 rounded-full -ml-16 bg-white p-1 overflow-hidden"><img class="rounded-full object-fit w-full h-full" src="https://source.unsplash.com/random/252x252" alt=""></div>
-                            <em class="ml-3">and more</em>
-                        </div>
-                        <a href="/" class="text-gray-600 hover:text-gray-800 block text-center">Read More Success Stories</a>
                     </div>
                 </div>
             </div>
@@ -294,7 +261,40 @@
                 </div>
             </div>
         </section>
-        <section class="py-10 lg:py-32" id="contact">
+        <section class="py-10 lg:py-32">
+            <div class="container mx-auto flex flex-col gap-6">
+                <h1 class="text-3xl">Testimonials</h1>
+                <div class="flex items-center justify-between">
+                    <div class="rounded-xl bg-white shadow p-8 flex flex-col items-center justify-center max-w-[300px] w-full text-center gap-8">
+                        <img src="https://source.unsplash.com/random/250x250" alt="HR Manager" class="w-32 h-32 rounded-full">
+                        <p>We've transformed our recruitment process with Backfeed.ai. It's efficient, and the candidate experience is unmatched.</p>
+                        <p class="text-gray-500 text-sm">HR Manager, Tech Company</p>
+                    </div>
+                    <div class="rounded-xl bg-white shadow p-8 flex flex-col items-center justify-center max-w-[300px] w-full text-center gap-8">
+                        <img src="https://source.unsplash.com/random/250x250" alt="HR Manager" class="w-32 h-32 rounded-full">
+                        <p>We've transformed our recruitment process with Backfeed.ai. It's efficient, and the candidate experience is unmatched.</p>
+                        <p class="text-gray-500 text-sm">HR Manager, Tech Company</p>
+                    </div>
+                    <div class="rounded-xl bg-white shadow p-8 flex flex-col items-center justify-center max-w-[300px] w-full text-center gap-8">
+                        <img src="https://source.unsplash.com/random/250x250" alt="HR Manager" class="w-32 h-32 rounded-full">
+                        <p>We've transformed our recruitment process with Backfeed.ai. It's efficient, and the candidate experience is unmatched.</p>
+                        <p class="text-gray-500 text-sm">HR Manager, Tech Company</p>
+                    </div>
+                    <div>
+                        <div class="rounded-full p-2 pr-3 w-full shadow bg-white flex items-center justify-between mx-auto">
+                            <div class="w-24 h-24 rounded-full bg-white p-1 overflow-hidden"><img class="rounded-full object-fit w-full h-full" src="https://source.unsplash.com/random/252x252" alt=""></div>
+                            <div class="w-24 h-24 rounded-full -ml-16 bg-white p-1 overflow-hidden"><img class="rounded-full object-fit w-full h-full" src="https://source.unsplash.com/random/252x252" alt=""></div>
+                            <div class="w-24 h-24 rounded-full -ml-16 bg-white p-1 overflow-hidden"><img class="rounded-full object-fit w-full h-full" src="https://source.unsplash.com/random/252x252" alt=""></div>
+                            <div class="w-24 h-24 rounded-full -ml-16 bg-white p-1 overflow-hidden"><img class="rounded-full object-fit w-full h-full" src="https://source.unsplash.com/random/252x252" alt=""></div>
+                            <div class="w-24 h-24 rounded-full -ml-16 bg-white p-1 overflow-hidden"><img class="rounded-full object-fit w-full h-full" src="https://source.unsplash.com/random/252x252" alt=""></div>
+                            <em class="ml-3">and more</em>
+                        </div>
+                        <a href="/" class="text-gray-600 hover:text-gray-800 block text-center">Read More Success Stories</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="bg-gradient-to-r from-gray-100 to-gray-300 text-gray-800 py-10 lg:py-32" id="contact">
             <div class="container mx-auto flex gap-6">
                 <div class="w-1/2">
                     <h1 class="text-3xl mb-2">Contact Us</h1>
@@ -339,7 +339,10 @@
     <footer class="bg-[#18122B] w-full py-20">
         <div class="container mx-auto text-gray-50">
             <div class="flex items-center gap-3 justify-between">
-                <a href="/" class="font-bold inline-flex items-center justify-center gap-3 text-xl mb-3"><img class="rounded h-20 w-auto" src="/Backfeed Main Logo 2000x1500.jpg" /> Backfeed.ai</a>
+                <div>
+                    <a href="/" class="font-bold inline-flex items-center justify-center gap-3 text-xl mb-3"><img class="rounded w-64" src="/Backfeed White logo 2000x1500.png" /></a>
+                    <h2 class="text-xl">Revolutionize Your Recruitment Process</h2>
+                </div>
                 <div class="flex flex-col">
                     <h2 class="text-xl">Links</h2>
                     <a href="#home">Home</a>
